# RISC-OS-Kernel-in-C

./: CMakeLists.txt  README.md  generate_ro_rom.sh  rom.script
Modules/: modules.c
kernel/: kernel.h
swis/: swis.c
